[package]
name = "tile_gradient_arranger"
description = "A program for creating gradient mosaics from a list of images."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
grid = "0.12.0"
image = "0.24.7"
itertools = "0.12.1"
lab = "0.11.0"
petgraph = "0.6.4"
